<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dinheirno no Bolso</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="seja_bem_vindo">Bem-Vindo</string>
    <string name="nova_despesa">Nova Despesa</string>
    <string name="nova_receita">Nova Receita</string>
    <string name="listar_despesas">Listar Despesas</string>
    <string name="despesas_do_mes">Despesas do Mês</string>
    <string name="financas_do_mes">Finanças do Mês</string>
    <string name="minhas_configuracoes">Minhas Configurações</string>
    <string name="informacoes">Informações</string>
    <string name="gerenciador_financeiro">Gerenciador Financeiro</string>
    <string name="title_activity_main">Dinheiro no Bolso</string>
    <string name="configuracoes">Configurações</string>
    <string name="title_activity_nova_despesa">Nova Despesa</string>
    <string name="nome_da_despesa">Nome da Despesa</string>
    <string name="tipo_de_despesa">Tipo de Despesa</string>
    <string name="despesa_variavel">Despesa Variável</string>
    <string name="despesa_fixa">Despesa Fixa</string>
    <string name="data_de_vencimento">Data de Vencimento</string>
    <string name="selecione_a_data">Selecione a Data</string>
    <string name="valor_da_despesa">Valor da Despesa</string>
    <string name="salvar">Salvar</string>
    <string name="nome_da_receita">Nome da Receita</string>
    <string name="tipo_de_receita">Tipo de Receita</string>
    <string name="receita_variavel">Receita Variável</string>
    <string name="salario_fixo">Salário Fixo</string>
    <string name="data_de_recebimento_deste_mes">Data de Recebimento deste Mês</string>
    <string name="valor_liquido_da_receita">Valor Líquido da Receita</string>
    <string name="opcoes">Opções</string>
    <string name="listar_receitas">Listar Receitas</string>
    <string name="despesas_pagas">Despesas Pagas</string>
    <string name="despesas_vencidas">Despesas Vencidas</string>
    <string name="title_activity_nova_receita">Nova Receita</string>
    <string name="title_activity_financas_mes">Finanças do Mês</string>
    <string name="despesaPaga">Pago</string>
    <string name="despesaNaoPaga">à Pagar</string>
    <string name="statusDespesa">Status da Despesa</string>
    <string name="minhas_despesas">Minhas Despesas</string>
    <string name="excluir">Excluir</string>
    <string name="alterar">Alterar</string>
    <string name="detalhes">Detalhes</string>
    <string name="meus_lancamentos">Meus Lançamentos</string>
    <string name="title_activity_despesas_pagas">Despesas Pagas</string>

</resources>
