<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFEFD"
    >

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1,2"
        tools:ignore="MissingPrefix"
        android:background="#FCFEFD">

        <LinearLayout
            android:id="@+id/linearDespesa"
            android:background="#E74C3C"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/LabelNovaDespesa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nova_despesa"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff"
                android:textStyle="bold" />

        </LinearLayout>

        <TableRow>
            <TextView
                android:text="@string/nome_da_despesa"
                android:layout_marginTop="20dp"
                />
        </TableRow>

        <TableRow>
            <EditText
                android:id="@+id/nomeDespesa"
                android:inputType="text"
                />
        </TableRow>

        <TableRow>
            <CheckBox
                android:id="@+id/tipoDespesafixaChek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/despesa_fixa"
                />
        </TableRow>


        <TableRow>
            <TextView
                android:layout_gravity="center"
                android:text="@string/data_de_vencimento"/>
        </TableRow>

        <TableRow >
            <Button
                android:id="@+id/dataVenc"
                android:onClick="selecionarData"
                android:text="@string/selecione_a_data"
                android:background="#FFFFFF"/>
        </TableRow>

        <TableRow>
            <TextView android:text="@string/valor_da_despesa"/>
        </TableRow>

        <TableRow>
            <EditText
                android:id="@+id/valorDesp"
                android:inputType="numberDecimal"
                />
        </TableRow>

        <TableRow>
            <TextView android:text="@string/statusDespesa"/>
        </TableRow>

        <TableRow>
            <RadioGroup
                android:id="@+id/statusDespesa"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/statusPago"
                    android:text="@string/despesaPaga"/>
                <RadioButton
                    android:id="@+id/statusNaoPago"
                    android:checked="true"
                    android:layout_marginLeft="30dp"
                    android:text="@string/despesaNaoPaga"/>
            </RadioGroup>
        </TableRow>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <Button
                android:id="@+id/BtSalvarDespesa"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:onClick="salvarDespesa"
                android:text="@string/salvar"
                android:background="@drawable/shape_button_success"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                />
        </LinearLayout>
    </TableLayout>

</ScrollView>