<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#2C3E50"
        >

        <TextView
            android:id="@+id/novaDespesa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="80dp"
            android:clickable="true"
            android:drawableTop="@drawable/nova_despesa"
            android:onClick="selecionarOpcao"
            android:text="@string/nova_despesa"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="15sp"
            />
        <TextView
            android:id="@+id/novaReceita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/novaDespesa"
            android:layout_marginRight="50dp"
            android:layout_marginTop="27dp"
            android:clickable="true"
            android:drawableTop="@drawable/dinheiro"
            android:onClick="selecionarOpcao"
            android:text="@string/nova_receita"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/financasDoMes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/novaDespesa"
            android:layout_below="@+id/novaDespesa"
            android:layout_marginTop="37dp"
            android:clickable="true"
            android:drawableTop="@drawable/grafico"
            android:onClick="selecionarOpcao"
            android:text="@string/financas_do_mes"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/informacoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/financasDoMes"
            android:layout_alignBottom="@+id/financasDoMes"
            android:layout_alignRight="@+id/novaReceita"
            android:clickable="true"
            android:drawableTop="@drawable/config"
            android:onClick="selecionarOpcao"
            android:text="@string/configuracoes"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>
